--- a/blogpost.html
+++ b/blogpost.html
@@ -11,7 +11,12 @@
             </div>
             <div id="post">
                 <h1>Este es el título atractivo e interesante del post</h1>
-                <p>Y este es el p&aacute;rrafo de inicio donde vamos a explicar cosas incre&iacute;bles que se puede hacer con ramas</p>
+                <p>
+                    Y este es el p&aacute;rrafo de inicio donde vamos a explicar cosas incre&iacute;bles que se puede hacer con ramas    
+                </p>
+                <p>
+                    <img src="/imagenes/dragon2.png" alt="">
+                </p>
                 <p>
                     Los blogs son la mejor forma de compartir informacion y tus ideas.
                     Mucho mas que ir a confereencias o salir en Youtube. Excepto  si eres un rockstar. Pero no lo eres... por ahora
